# freezegun

./: .covergerc  .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG  LICENSE  MANIFEST.in  Makefile  README.es.rst  README.rst  create_tag.py  index.html  mypy.ini  params.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yaml  release.yml
freezegun/: __init__.py  __init__.pyi  _async.py  _async_coroutine.py  api.py  api.pyi  config.py  magic.py
tests/: another_module.py  dynamic_module.py  fake_module.py  fake_module_lazy.py  test_asyncio.py  test_class_decorator.py  test_class_import.py  test_configure.py  test_datetimes.py  test_errors.py  test_import_alias.py  test_importlib.py  test_lazy_ticking.py  test_operations.py  test_pickle.py  test_sqlite3.py  test_target.py  test_ticking.py  test_times.py  test_utils.py  test_uuid.py  test_warnings.py  utils.py
