[matadata]
name = freezegun
version = attr: freezegun.__version__
description = Let your Python tests travel through time
long_description = file: README.rst
author = Steve Pulec
author_email = spulec@gmail.com
url = https://github.com/spulec/freezegun
license = Apache 2.0
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = freezegun
python_requires = >=3.5
install_requires =
    python-dateutil >= 2.7
include_package_data = true
