[metadata]
name = freezegun
version = attr: freezegun.__version__
description = Let your Python tests travel through time
long_description = file: README.rst
author = Steve Pulec
author_email = spulec@gmail.com
url = https://github.com/spulec/freezegun
project_urls =
    Bug Tracker = https://github.com/spulec/freezegun/issues
    Changes = https://github.com/spulec/freezegun/blob/master/CHANGELOG
    Documentation = https://github.com/spulec/freezegun/blob/master/README.rst
    Source Code = https://github.com/spulec/freezegun
license = Apache 2.0
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = freezegun
python_requires = >=3.7
install_requires =
    python-dateutil >= 2.7
include_package_data = true
